Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/SMAX_PS_Work_Order_Assign_Filter__c.object-meta.xml
<CustomObject>
    <label>Work Order Assign Filter</label>
    <nameField>
        <displayFormat>WOAF-{00000000}</displayFormat>
        <label>Work Order Assign Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Assign Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>