Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Account_City__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Account_City__c</fullName>
    <label>Account City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>