Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>