Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Customer_Number__c</fullName>
    <description>SAP Sold-To Customer Number</description>
    <inlineHelpText>SAP Sold-To Customer Number</inlineHelpText>
    <label>Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>