Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Filter_Label__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Filter_Label__c</fullName>
    <label>Filter Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>