Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Filter_On__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Filter_On__c</fullName>
    <label>Filter On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Order: Number</fullName>
            </value>
            <value>
                <fullName>Work Order: SAP Service Order Number</fullName>
            </value>
            <value>
                <fullName>Work Order: Account</fullName>
            </value>
            <value>
                <fullName>Work Order: Customer Number</fullName>
            </value>
            <value>
                <fullName>Work Order: Account City</fullName>
            </value>
            <value>
                <fullName>Work Order: Location</fullName>
            </value>
            <value>
                <fullName>Work Order: Is Enterprise</fullName>
            </value>
            <value>
                <fullName>Work Order: Billing Type</fullName>
            </value>
            <value>
                <fullName>Work Order: Order Status</fullName>
            </value>
            <value>
                <fullName>Work Order: Technician</fullName>
            </value>
            <value>
                <fullName>Technician: Name</fullName>
            </value>
            <value>
                <fullName>Technician: Service Team</fullName>
            </value>
            <value>
                <fullName>Technician: Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>