Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Is_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Enterprise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enterprise</label>
    <type>Checkbox</type>
</CustomField>