Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Location__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipLabel>Work Order Assign Filters</relationshipLabel>
    <relationshipName>Work_Order_Assign_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>