Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On Hold - Credit</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Ready to Dispatch</fullName>
            </value>
            <value>
                <fullName>Technician Accepted</fullName>
            </value>
            <value>
                <fullName>Technician Rejected</fullName>
            </value>
            <value>
                <fullName>Technician Enroute</fullName>
            </value>
            <value>
                <fullName>Technician Onsite</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer</fullName>
            </value>
            <value>
                <fullName>Estimate Approved</fullName>
            </value>
            <value>
                <fullName>Estimate Rejected</fullName>
            </value>
            <value>
                <fullName>Requires Revisit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>