Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Service_Team__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Service_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team</label>
    <referenceTo>SVMXC__Service_Group__c</referenceTo>
    <relationshipLabel>Work Order Assign Filters</relationshipLabel>
    <relationshipName>Work_Order_Assign_Filters</relationshipName>
    <type>Lookup</type>
</CustomField>