Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Work_Order_Assign_View__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Order_Assign_View__c</fullName>
    <label>Work Order Assign View</label>
    <referenceTo>SMAX_PS_Work_Order_Assign_View__c</referenceTo>
    <relationshipLabel>Work Order Assign Filters</relationshipLabel>
    <relationshipName>SMAX_PS_Work_Order_Assign_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>