Perkin-UAT/force-app/main/default/objects/SMAX_PS_Work_Order_Assign_Filter__c/fields/SMAX_PS_Work_Order_Numbers__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Order_Numbers__c</fullName>
    <label>Work Order Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>